# uni_routing

./: .gitignore  Cargo.toml  LICENSE  PROJECT_COMPLETION_SUMMARY.md  PROJECT_SUMMARY.md  README.md
examples/: demo.rs
examples/actix_server/: Cargo.toml  expanded.rs  full_expanded.rs
examples/actix_server/src/: main.rs
examples/axum_server/: Cargo.toml
examples/axum_server/src/: main.rs
examples/rocket_server/: Cargo.toml
examples/rocket_server/src/: main.rs
src/: auth.rs  lib.rs  middleware.rs  registry.rs  routing.rs  swagger.rs
src/frameworks/: actix.rs  mod.rs
tests/: auth_tests.rs  integration_tests.rs  macro_tests.rs  middleware_tests.rs  routing_tests.rs  swagger_tests.rs
uni_routing_macros/: Cargo.toml
uni_routing_macros/src/: lib.rs
