[package]
name = "uni_routing"
version = "0.1.0"
edition = "2021"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
utoipa = { version = "4.0", optional = true }
jsonwebtoken = { version = "8.0", optional = true }
chrono = { version = "0.4", optional = true }
proc-macro2 = "1.0"
quote = "1.0"
syn = { version = "2.0", features = ["full"] }
uni_routing_macros = { path = "./uni_routing_macros" }

# Actix-web dependencies (optional)
actix-web = { version = "4.0", optional = true }
env_logger = { version = "0.10", optional = true }

# Rocket dependencies (optional)
rocket = { version = "0.5", optional = true }

# Axum dependencies (optional)
axum = { version = "0.7", optional = true }
tokio = { version = "1.0", features = ["full"], optional = true }
tower-http = { version = "0.5", optional = true }
tracing = { version = "0.1", optional = true }
tracing-subscriber = { version = "0.3", optional = true }

[features]
default = ["jwt", "actix"]
actix = ["dep:actix-web", "dep:env_logger", "chrono"]
rocket = ["dep:rocket", "chrono"]
axum = ["dep:axum", "dep:tokio", "dep:tower-http", "dep:tracing", "dep:tracing-subscriber", "chrono"]
swagger = ["dep:utoipa"]
jwt = ["dep:jsonwebtoken"]

full = ["actix", "rocket", "axum", "swagger", "jwt"]

[workspace]
members = [
    ".", "examples/actix_server", "examples/axum_server", "examples/rocket_server",
    "uni_routing_macros",
]
