[package]
name = "uni_routing"
version = "0.1.0"
edition = "2021"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
uni_routing_macros = { path = "./uni_routing_macros" }

# Actix-web support
actix-web = { version = "4.0", optional = true }

# Rocket support
rocket = { version = "0.5", optional = true }

# Axum support
axum = { version = "0.7", optional = true }

# JWT authentication
jsonwebtoken = { version = "8.0", optional = true }

# OpenAPI documentation generation
utoipa = { version = "4.0", optional = true }
utoipa-swagger-ui = { version = "4.0", optional = true }

# Async runtime
tokio = { version = "1.0", features = ["full"], optional = true }

# Time handling
chrono = { version = "0.4", features = ["serde"], optional = true }

[features]
default = ["actix", "jwt"]
actix = ["dep:actix-web", "dep:chrono"]
rocket = ["dep:rocket", "dep:chrono"]
axum = ["dep:axum", "dep:tokio", "dep:chrono"]
jwt = ["dep:jsonwebtoken"]
swagger = ["dep:utoipa", "dep:utoipa-swagger-ui"]
full = ["actix", "rocket", "axum", "jwt", "swagger"]

[workspace]
members = [
    ".",
    "uni_routing_macros",
    "examples/actix_server",
    "examples/axum_server",
    "examples/rocket_server",
]

[dev-dependencies]
tokio = { version = "1.0", features = ["full"] }
env_logger = "0.10"
tracing-subscriber = "0.3"