[package]
name = "actix_server"
version = "0.1.0"
edition = "2021"

[dependencies]
uni_routing = { path = "../../", features = ["actix", "swagger", "jwt"] }
actix-web = "4.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.0", features = ["full"] }
env_logger = "0.10"
chrono = { version = "0.4", features = ["serde"] }
