[package]
name = "axum_server"
version = "0.1.0"
edition = "2021"

[dependencies]
uni_routing = { path = "../../", features = ["axum", "swagger", "jwt"] }
uni_routing_macros = { path = "../../uni_routing_macros" }
axum = "0.7"
tokio = { version = "1.0", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tracing = "0.1"
tracing-subscriber = "0.3"
chrono = { version = "0.4", features = ["serde"] }
